# fifpuz

./: CMakeLists.txt  README.md
include/internal/: direction.hh  point.hh  tile.hh
src/: board.cc  controller.cc  main.cpp
test/: point_test.cc
